Tue Apr 22 16:01:25 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fix a memory related segfault on a
	  pattern compilation error #110189

Tue Apr 22 15:45:25 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: fixing bug #110020 on global parameter
	  and variables mismatch
	* tests/reports/Makefile.am tests/reports/cmdlineparams.*: added
	  the test to the regression suite

Mon Apr 21 12:22:31 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libexslt/math.c: applied patch from Charles Bozeman fixing
	  the math power function where args were inverted #110996
	* tests/exslt/math/Makefile.am tests/exslt/math/power.1.*:
	  added the test to the regraession for #110996
	* libexslt/sets.c: avoid a problem with nodesets.

Wed Apr 14 18:10:21 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/win32config.h: added HAVE_MATH_H
	  
Wed Apr 13 14:04:15 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/Makefile.msvc: fixed compilation with thread-enabled
	  libxml
	  
Wed Apr  9 22:02:17 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libexslt/strings.c: applied patch from Mark Vakoc fixing a problem
	  with RTF in libexslt

Mon Apr  7 14:39:01 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.c libxslt/templates.c libxslt/transform.c
	  libxslt/variables.c: Fixes bug #110023 reported by Mark Vakoc and
	  other places where ctxt->document pointer may be used without 
	  checking it agaisnt NULL.
	* tests/docs/Makefile.am tests/docs/bug-115.*
	  tests/general/Makefile.am tests/general/bug-115*: added the
	  example in the regression tests for that bug.
	* libxslt/trio.h libxslt/triodef.h: update of Trio from Bjorn Reese

Tue Apr  1 13:39:26 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in NEWS: preparing 1.0.29 release
	* libxslt/documents.c: generate the document order for document()
	  loaded resources.
	* doc/*: updated and regenerated the docs
