@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<root
+    xmlns:xsl="http://www.w3.org/1999/XSL/Transform" 
+    xmlns:ex="http://www.example.org/"
+    >
+</root>
